--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <title></title>
   </head>
   <body>
-    <<h1>JS Playground</h1>
+    <h1>JS Playground</h1>
     <script>
       console.log("Hello world")
     </script>
